fix thumbnail spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -227,6 +227,11 @@ header {
       margin-bottom: 0;
     }
   }
+  div.thumb {
+    img {
+      margin: 0;
+    }
+  }
   .spacer {
     padding: 0 !important;
     height: .1px;
